--- a/Treact/styles__final-project.css
+++ b/Treact/styles__final-project.css
@@ -149,6 +149,11 @@ align-items: center;
 
 }
 
+.email{
+    border: none;
+margin-left: 10px;
+}
+
 
 
 .main_bottom{
@@ -157,13 +162,33 @@ align-items: center;
 }
 
 .logo_strip{
-    width: 350px;
+    width: 70%
 }
 
 .logo__strip-para{
     font-size: 12px;
     font-weight: bold;
     padding-bottom: 16px;
+}
+
+
+/* FEATURES */
+
+.features_row{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.services{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.group{
+    width: calc(100%/3);
 }
 
 
