--- a/Treact/styles__final-project.css
+++ b/Treact/styles__final-project.css
@@ -369,6 +369,7 @@ margin-left: 10px;
 .pricing{
     padding-top: 6rem;
     margin: 0 69px;
+    padding-bottom: 6rem;
 }
 
 .pricing_header{
@@ -463,6 +464,85 @@ margin-left: 10px;
    
 
 }
+
+
+
+/* FOOTER  */
+
+
+
+ul{
+    list-style: none;
+    
+}
+
+footer{
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+    background-color: rgba(99, 21, 255, 0.928);
+    color: rgb(247, 250, 252);
+    
+}
+
+.footer_row{
+    padding: 2rem 8rem 2rem 8rem;
+}
+
+.main_title{
+    padding-bottom: 20px;
+    font-weight: 700;
+    
+}
+
+.main_link{
+ padding-bottom: 10px;
+ font-weight: 500;
+
+}
+
+.linksbox{
+    
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 3rem;
+    padding-top: 3rem;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.183);
+    border-top: 2px solid rgba(255, 255, 255, 0.183);
+    border-radius: 10px;
+
+
+}
+
+.footer__bottom-box{
+    padding-top: 3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    
+}
+
+.footer_clickable:hover{
+    text-decoration: underline;
+}
+
+.footer_clickable{
+    color: rgb(247, 250, 252);
+}
+
+
+.logo__footer-name{
+    color: white;
+}
+
+.logo__footer-wrapper{
+
+}
+
+.footer_socials{
+    color: white;
+}
+
 
 
 
