--- a/Treact/styles__final-project.css
+++ b/Treact/styles__final-project.css
@@ -74,7 +74,7 @@ nav{
 }
 
 .site_box{
-    padding: 2rem 8rem 2rem 8rem;
+    padding: 2rem 2rem;
 }
 
 
@@ -229,6 +229,7 @@ margin-left: 10px;
     font-size: 3rem;
     font-weight: 900;
     padding-bottom: 24px;
+
 }
 
 .features_para{
@@ -277,6 +278,10 @@ margin-left: 10px;
 }
 .quality__logo-wrapper{
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .quality_logo{
@@ -322,7 +327,7 @@ margin-left: 10px;
 }
 
 
-.text_group{
+.text_group {
     width: 80%;
    
 
@@ -522,6 +527,12 @@ footer{
     
 }
 
+.footerlinks{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
 .footer_clickable:hover{
     text-decoration: underline;
 }
@@ -542,6 +553,266 @@ footer{
 .footer_socials{
     color: white;
 }
+
+
+
+
+/* MEDIA 1280 PX (TABLETS ETC) */
+
+
+@media (max-width: 1280px){
+
+    .home_page{
+        display: flex;
+        justify-content: space-between;
+    }
+
+
+    .main_header{
+        font-size: 32px;
+    }
+
+    .main_body{
+        font-size: 16px;
+    }
+
+    .working_lady{
+width: 600px;
+
+    }
+
+    .working__lady-wrapper{
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+    }
+
+    .services{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        
+            }
+        
+            .group{
+                width: calc(100%/2);
+            }
+
+}
+
+
+/* MEDIA 1025px */
+
+@media (max-width: 1025px){
+
+    .footer_row{
+        padding: 10px 24px;
+    }
+    
+    .home_page{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .main_header{
+        text-align: center;
+    }
+
+    .main_body{
+        text-align: center;
+    }
+
+    .templates{
+        max-width: 600px;
+        width: 100%;
+    }
+
+    .main_bottom{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .logo__strip-wrapper{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .working_lady{
+        padding-top: 40px;
+    }
+
+.features_para, .quality_para, .pricing_para{
+    max-width: 80%;
+    width: 100%;
+    font-size: 16px;
+    text-align: center;
+    margin: 0 auto;
+}
+.pricing_header{
+    padding: 0 0 20px 0;
+}
+    /* ------- */
+
+    .services{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+
+    }
+
+    .group{
+        width: calc(100%/2);
+    }
+
+
+    /* ----- */
+
+    .started{
+        padding-right: 0;
+    }
+
+    /* ----- */
+
+    .plan{
+
+        margin: 32px auto;
+        width: 350px;
+
+
+    }
+
+    .pricing_plans{
+display: block;
+
+    }
+
+    .quality{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .quality_wrapper{
+     width: 100%;
+     padding-bottom: 42px;
+    }
+
+    .quality_info{
+        width: 80%;
+    }
+
+    .quality__logo-wrapper{
+        width: 80%;
+    }
+
+    .get_started{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .started{
+        width: 100%;
+        text-align: center;
+        padding-left: 0;
+    }
+
+    .getting___started--group-para{
+      padding-left: 0;
+      text-align: center;
+      
+      
+    }
+
+    
+
+    .group_1{
+        max-width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+   
+    }
+
+    .started__logo-wrapper{
+        width: 80%;
+        padding-top: 32px;
+        text-align: center;
+    }
+
+    .footer_row{
+        font-size: 14px;
+    }
+
+}
+
+/* MEDIA 830px PHONES  */
+
+
+@media(max-width:830px){
+    .features_subtitle{
+        text-align: center;
+    }
+
+  
+    
+}
+
+
+/* MEDIA 770px PHONES  */
+
+
+@media(max-width:770px){
+    .group{
+        width: calc(100%/1);
+    }
+
+   
+   
+
+    
+
+
+}
+
+
+
+
+
+
+/* MEDIA 640px PHONES  */
+
+@media(max-width:640px){
+.email_box{
+
+}
+.features_subtitle{
+    font-size: 36px;
+}
+
+.quality_para{
+    font-size: 16px;
+}
+
+.features_para{
+    font-size: 16px;
+    width: 80%;
+}
+
+
+}
+
 
 
 
