added burger menu

--- a/Treact/styles__final-project.css
+++ b/Treact/styles__final-project.css
@@ -16,6 +16,8 @@ a{
     
 }
 
+
+
 button:hover{
     cursor: pointer;
 }
@@ -23,6 +25,10 @@ button:hover{
 
 input {
     outline:none;
+   }
+
+   html{
+    scroll-behavior: smooth;
    }
 
 
@@ -83,6 +89,7 @@ nav{
 
 .link_list{
     display: flex;
+
     
 }
 
@@ -103,6 +110,75 @@ nav{
 .link{
     color: rgb(50, 50, 50)
 }
+
+/* BURGER MENU  */
+
+.btn__menu{
+    background-color: transparent;
+    font-size: 24px;
+    text-align: center;
+    border: none;
+    color: rgb(100 21 255);
+    display: none;
+}
+
+
+
+.menu__backdrop{
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    border-radius: 4px;
+    top: 2%;
+    left: 2%;
+    right: 2%;
+    bottom: 55%;
+    border: 1px solid rgba(0, 0, 0, 0.107);
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 300ms ease;
+    opacity: 0;
+    visibility: hidden;
+  
+}
+
+.menu--open .menu__backdrop{
+    display: flex;
+    visibility: visible;
+    opacity: 1;
+}
+
+
+.btn__menu--close{
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: rgb(100 21 255);
+}
+
+.menu__links{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.menu__list{
+    padding: 16px 0;
+    font-size: 16px;
+    font-weight: 600;
+
+
+}
+
+.menu__link{
+    color: black;
+}
+
+
 
 
 /* HOME PAGE */
@@ -552,6 +628,12 @@ footer{
 
 .footer_socials{
     color: white;
+    width: calc(100%/3);
+    font-size: 25px;
+}
+
+.footer_links{
+
 }
 
 
@@ -561,6 +643,10 @@ footer{
 
 
 @media (max-width: 1280px){
+
+  
+
+
 
     .home_page{
         display: flex;
@@ -606,10 +692,18 @@ justify-content: center;
 
 @media (max-width: 1025px){
 
+    .link_list{
+        display: none;
+    }
+
+    .btn__menu{
+        display: block;
+    }
+
     .footer_row{
         padding: 10px 24px;
     }
-    
+
     .home_page{
         display: flex;
         flex-direction: column;
@@ -776,6 +870,10 @@ display: block;
 @media(max-width:770px){
     .group{
         width: calc(100%/1);
+    }
+
+    .features{
+        margin: 0;
     }
 
    
